# benchmark-suffix-array

./: CMakeLists.txt  benchmark.config  index_types.config  test_cases.config
CMakeModules/: AppendCompilerFlags.cmake  FindR.cmake  HelperFunctions.cmake  ProcessResults.cmake  ReadGlobalBenchConfig.cmake  ReadIndexConfig.cmake  ReadTestCasesConfig.cmake
include/: config.hpp  config.hpp.cmake  util.hpp
src/: count.cpp  locate.cpp  pat2pizzachili.cpp
visualize/: OUTPUT_FILE  count.R  count.tex  gather-results.sh
